--- a/apirest/wwwroot/index.html
+++ b/apirest/wwwroot/index.html
@@ -8,32 +8,53 @@
   </head>
 
   <body>
+
     <header>
       <div id="logo">
-        Logo be here
+         <img src="./images/logo.png" alt="Logo" >
       </div>
 
       <div id="mainButtons">
-        Main Buttons be Here
+          <a href="#home">Home</a>
+          <a href="#news">Contactos</a>
+          <a href="#home">Animais</a>
+          <a href="#news">Mais</a>
       </div>
 
       <div id="profile">
-        Other Buttons Be Here
+          <a href="#news">Login</a>
       </div>
 
     </header>
 
     <div id="mainContent">
-      <div id="contentleft">
+      <div id="slideContent">
+        <div class="slides">
+            <img src="./images/logo.png" alt="slide1" >
+            <div id="slideCaption">First Image</div>
+        </div>
+        <div class="slides">
+            <img src="./images/golden.jpg" alt="slide1" >
+            <div id="slideCaption">First Image</div>
+        </div>
+        <div class="slides">
+            <img src="./images/goldenRequiem.jpg" alt="slide1" >
+            <div id="slideCaption">First Image</div>
+        </div>
+        <a class="previous" onClick="changeSlide(-1)">&#10094;</a>
+        <a class="next" onClick="changeSlide(+1)">&#10095;</a>
+
+      </div>
+      <!--<div id="contentleft">
           <h1>
-            The Next thing you gnna say is
+            Yare Yare
           </h1>
       </div>
       <div id="contentright">
           <h1>
             "Did you use bootstrap?"
           </h1>
-      </div>
+      </div>-->
       <!--<div id="adminButtons">
         <h1>This is a Heading</h1>
       </div>
@@ -45,5 +66,7 @@
     <footer>
         <h1>ORA ORA ORA ORA ORA ORA</h1>
     </footer>
+    <script type="text/javascript" src="./js/functions.js"></script>
+
   </body>
 </html>
