--- a/apirest/wwwroot/administration.html
+++ b/apirest/wwwroot/administration.html
@@ -29,19 +29,7 @@
     </header>
 
     <div class="mainContent">
-      <div id="slideContent">
-        <div class="slides">
-            <img src="./images/golden.jpg" alt="slide1" >
-            <div class="slideCaption">First Image</div>
-        </div>
-       <div class="slides">
-            <img src="./images/goldenRequiem.jpg" alt="slide1" >
-            <div class="slideCaption">First Image</div>
-        </div>
-        <a class="previous" onClick="changeSlide(-1)">&#10094;</a>
-        <a class="next" onClick="changeSlide(+1)">&#10095;</a>
 
-      </div>
       <!--<div id="contentleft">
           <h1>
             Yare Yare
@@ -52,12 +40,16 @@
             "Did you use bootstrap?"
           </h1>
       </div>-->
-      <!--<div id="adminButtons">
-        <h1>This is a Heading</h1>
+      <div class="adminButtons">
+          <a href="#" class="active">Home</a>
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+          <a href="#">Link 4</a>
       </div>
-      <div id="adminFunctions">
+      <div class="adminFunctions">
         <p>This is a paragraph.</p>
-      </div>-->
+      </div>
     </div>
 
     <!--<footer>
