--- a/apirest/wwwroot/contacs.html
+++ b/apirest/wwwroot/contacs.html
@@ -10,6 +10,7 @@
   <body>
 
     <header>
+
       <div id="logo">
          <img src="./images/logo.png" alt="Logo" >
       </div>
@@ -22,36 +23,19 @@
             <a href="#home">Home</a>
       </div>
 
-      <!--<div id="profile">
-          <a href="#news">Login</a>
-      </div>-->
-
     </header>
 
     <div class="mainContent">
-      <div id="slideContent">
-        <div class="slides">
-            <img src="./images/golden.jpg" alt="slide1" >
-            <div class="slideCaption">First Image</div>
-        </div>
-       <div class="slides">
-            <img src="./images/goldenRequiem.jpg" alt="slide1" >
-            <div class="slideCaption">First Image</div>
-        </div>
-        <a class="previous" onClick="changeSlide(-1)">&#10094;</a>
-        <a class="next" onClick="changeSlide(+1)">&#10095;</a>
-
-      </div>
-      <!--<div id="contentleft">
+      <div class="contentleft">
           <h1>
             Yare Yare
           </h1>
       </div>
-      <div id="contentright">
+      <div class="contentright">
           <h1>
             "Did you use bootstrap?"
           </h1>
-      </div>-->
+      </div>
       <!--<div id="adminButtons">
         <h1>This is a Heading</h1>
       </div>
